[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Primary/Interface/MovementWindow/CombatMenu/CobatMenuElement.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Primary/Interface/MovementWindow/CombatMenu/CombatMenu.gd" type="Script" id=2]

[node name="CombatMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.180392, 0.533333, 0.0156863, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CobatMenuElement" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 1014.0
margin_bottom = 194.0
mouse_filter = 1

[node name="CobatMenuElement2" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 198.0
margin_right = 1014.0
margin_bottom = 392.0
mouse_filter = 1

[node name="CobatMenuElement3" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 396.0
margin_right = 1014.0
margin_bottom = 590.0
mouse_filter = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="attack_selected" from="VBoxContainer/CobatMenuElement" to="." method="_on_CobatMenuElement_attack_selected"]
[connection signal="attack_selected" from="VBoxContainer/CobatMenuElement2" to="." method="_on_CobatMenuElement_attack_selected"]
[connection signal="attack_selected" from="VBoxContainer/CobatMenuElement3" to="." method="_on_CobatMenuElement_attack_selected"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
